# ros-vosk

./: CMakeLists.txt  README.en.md  README.md  install.sh  package.xml  requirements.txt  setup.cfg  setup.py
cfg/: params.yaml  params_en.yaml  params_ja.yaml
launch/: ros_vosk.launch  speech_recognition_vosk.launch  speech_recognition_vosk.launch.py  stt_vosk.launch  voice_trigger.launch  voice_trigger.launch.py
scripts/: trigger.py  vosk_model_downloader.py  vosk_node.py  vosk_ros_model_downloader.py  vosk_server.py
speech_recognition_vosk/: model_downloader.py  trigger.py  vosk_model_downloader.py  vosk_node.py
